--- a/style.css
+++ b/style.css
@@ -162,6 +162,11 @@ button{
     color: black;
 }
 
+.img{
+    display: block;
+    margin: auto;
+}
+
 
 @media screen and (min-width:768px) {
     body{
